# virtualfriends

./: CMakeLists.txt  Poem.txt  friends.txt  main.cpp
